# cryptotax

./: .gitignore  .~lock.transactions.csv#  LICENCE  Makefile  README.md  setup.cfg
src/: cryptotax.py
tests/: test_cryptotax.py
