[metadata]
name = cryptotax
author = Tony M. Jenkins
author_email = tonymj@proton.me
description = Computes crypto trades PNL with FIFO method
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bitcoin, tax, fifo, accounting
license = MIT Licence
url = https://github.com/amarjen/seed-shuffler
requires_python: >= 3.7
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License

[options]
zip_safe = false
packages = find:
install_requires =
    pytest >= 7.1.2

[options.package_data]

[options.entry_points]
console_scripts =
    cryptotax = src.cryptotax:main

